--- a/styles.css
+++ b/styles.css
@@ -370,14 +370,17 @@ h3 a:hover {
 /* ---------------------------------------------------------- */
 
 @media (max-width: 480px) {
-/*---------------------NAV-------------------------*/
+
+    body{position: relative;}
+    /*---------------------NAV-------------------------*/
 
     .nav-list a {
         padding: 5px;
         font-size: 1rem;
         height: 30px;
     }
-/*---------------------WELCOME SECTION-------------------------*/
+
+    /*---------------------WELCOME SECTION-------------------------*/
 
     h1 {
         font-size: 2.5rem;
@@ -388,7 +391,8 @@ h3 a:hover {
     #quote3 {
         font-size: 1rem;
     }
-/*---------------------PROJECTS SECTION-------------------------*/
+
+    /*---------------------PROJECTS SECTION-------------------------*/
 
 
     .project-heading {
@@ -411,7 +415,8 @@ h3 a:hover {
         width: 400px;
         height: 267px;
     }
-/*---------------------ABOUT SECTION-------------------------*/
+
+    /*---------------------ABOUT SECTION-------------------------*/
 
     .about-title {
         font-size: 3rem;
@@ -419,13 +424,16 @@ h3 a:hover {
     }
 
     .about-description {
+        display: block;
+        max-height: 100%;
         font-size: 1rem;
         letter-spacing: 1.5px;
-        margin: 20px auto;
+        margin: 0 auto;
     }
-/*---------------------CONTACT-------------------------*/
 
-    footer {
+    /*---------------------CONTACT-------------------------*/
+
+    .contact-container {
         flex-direction: column;
     }
 
