Add Media Queries max 375px

--- a/styles.css
+++ b/styles.css
@@ -371,7 +371,10 @@ h3 a:hover {
 
 @media (max-width: 480px) {
 
-    body{position: relative;}
+    body {
+        position: relative;
+    }
+
     /*---------------------NAV-------------------------*/
 
     .nav-list a {
