--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,13 @@
 font-family: 'Varela Round', sans-serif; */
 
 /*-----------------GENERAL--------------------*/
+
+
 body {
-    height: 100vh;
     text-align: center;
     font-family: 'Varela Round', sans-serif;
     background-image: radial-gradient(circle, #1a3b6e, #00476c, #007b9b, #00b3bd, #58ebd1);
+
 }
 
 ul {
@@ -275,7 +277,8 @@ h3 a:hover {
 /* --------------------------------------------------- */
 
 .about-container {
-    height: 100vh;
+    min-height: 100%;
+    margin-bottom: 50px;
 }
 
 .img-about {
@@ -302,8 +305,8 @@ h3 a:hover {
 .about-description {
     font-size: 1.5rem;
     letter-spacing: 2px;
-    margin: 20px auto;
 }
+
 
 /* ----------------------------------------------------- */
 /*--------------------------CONTACT----------------------*/
@@ -312,12 +315,11 @@ h3 a:hover {
 .contact-container {
     position: sticky;
     bottom: 0;
-    left: 0.5%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    max-width: 99%;
-    height: 50px;
+    width: 100%;
+    height: 40px;
     background-color: #00476c95;
     outline: 1px solid gray;
     border-radius: 10px;
@@ -341,7 +343,7 @@ h3 a:hover {
 .contact-list a {
     position: relative;
     display: inline-block;
-    margin: 40px;
+    padding: 0 40px;
     font-size: 1.8rem;
     color: whitesmoke;
     text-decoration: none;
@@ -409,14 +411,14 @@ h3 a:hover {
     }
 
     .img-container {
-        width: 400px;
-        height: 267px;
+        width: 360px;
+        height: 240px;
     }
 
 
     .img-style {
-        width: 400px;
-        height: 267px;
+        width: 360px;
+        height: 240px;
     }
 
     /*---------------------ABOUT SECTION-------------------------*/
@@ -438,6 +440,8 @@ h3 a:hover {
 
     .contact-container {
         flex-direction: column;
+        width: 99%;
+        margin:0 auto;
     }
 
     .contact-title {
@@ -446,6 +450,6 @@ h3 a:hover {
 
     .contact-list a {
         font-size: 1rem;
-        margin: 5px;
+        padding: 3px;
     }
 }
