--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,7 @@ h3 a:hover {
 .contact-list a {
     position: relative;
     display: inline-block;
-    padding: 0 40px;
+    margin: 0 40px;
     font-size: 1.8rem;
     color: whitesmoke;
     text-decoration: none;
@@ -451,5 +451,6 @@ h3 a:hover {
     .contact-list a {
         font-size: 1rem;
         padding: 3px;
+        margin: 0;
     }
 }
