--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     text-align: center;
     font-family: 'Varela Round', sans-serif;
     background-image: radial-gradient(circle, #1a3b6e, #00476c, #007b9b, #00b3bd, #58ebd1);
+    height: 100vh;
 
 }
 
@@ -388,13 +389,17 @@ h3 a:hover {
     /*---------------------WELCOME SECTION-------------------------*/
 
     h1 {
-        font-size: 2.5rem;
+        font-size: 1.9rem;
+    }
+
+    .quotes-style {
+        font-size: 0.9rem;
     }
 
     #quote1,
     #quote2,
     #quote3 {
-        font-size: 0.8rem;
+        font-size: 0.6rem;
     }
 
     /*---------------------PROJECTS SECTION-------------------------*/
@@ -452,6 +457,212 @@ h3 a:hover {
     .contact-list a {
         font-size: 0.8rem;
         padding: 0 5px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+
+    body {
+        position: relative;
+    }
+
+    /*----------------------------NAV------------------------------*/
+    
+    .nav-list a {
+        padding: 5px;
+        font-size: 1.5rem;
+        height: 30px;
+    }
+
+    /*---------------------WELCOME SECTION-------------------------*/
+
+    h1 {
+        font-size: 3.1rem;
+    }
+
+    .quotes-style {
+        font-size: 2rem;
+    }
+
+    #quote1,
+    #quote2,
+    #quote3 {
+        font-size: 1rem;
+    }
+
+    /*---------------------PROJECTS SECTION-------------------------*/
+
+
+    .project-heading {
+        padding-top: 50px;
+        font-size: 1.5rem;
+
+    }
+
+    .project-container-grid {
+        grid-template-columns: repeat(1, 2fr);
+    }
+
+    .img-container {
+        width: 480px;
+        height: 320px;
+    }
+
+
+    .img-style {
+        width: 480px;
+        height: 320px;
+    }
+
+    /*---------------------ABOUT SECTION-------------------------*/
+
+    .about-title {
+        font-size: 3rem;
+        margin: 20px auto;
+    }
+
+    .about-description {
+        display: block;
+        max-height: 100%;
+        font-size: 1rem;
+        letter-spacing: 1.5px;
+        margin: 0 auto;
+    }
+
+    /*------------------------CONTACT-----------------------------*/
+
+    .contact-container {
+        flex-direction: column;
+        width: 99%;
+        margin:0 auto;
+    }
+
+    .contact-title {
+        font-size: 1.2rem;
+    }
+
+
+    .contact-list a {
+        font-size: 1rem;
+        padding: 0 15px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    
+    body {
+        position: relative;
+    }
+
+    /*----------------------------NAV------------------------------*/
+    
+    .nav-list a {
+        padding: 5px;
+        font-size: 1.5rem;
+        height: 30px;
+    }
+
+    /*---------------------WELCOME SECTION-------------------------*/
+
+    h1 {
+        font-size: 5rem;
+    }
+
+    .quotes-style {
+        font-size: 2.2rem;
+    }
+
+    #quote1,
+    #quote2,
+    #quote3 {
+        font-size: 1.5rem;
+    }
+
+    /*---------------------PROJECTS SECTION-------------------------*/
+
+
+    .project-heading {
+        padding-top: 50px;
+        font-size: 1.5rem;
+
+    }
+
+    .project-container-grid {
+        grid-template-columns: repeat(2, 2fr);
+        grid-template-rows: repeat(2, 2fr);
+    }
+
+    .img-container {
+        width: 300px;
+        height: 200px;
+    }
+
+
+    .img-style {
+        width: 300px;
+        height: 200px;
+    }
+
+    /*---------------------ABOUT SECTION-------------------------*/
+
+    .about-title {
+        font-size: 4rem;
+        margin: 30px auto;
+    }
+
+    .about-description {
+        display: block;
+        max-height: 100%;
+        font-size: 1.2rem;
+        letter-spacing: 1.7px;
+        margin: 0 auto;
+    }
+
+    /*------------------------CONTACT-----------------------------*/
+
+    .contact-container {
+        width: 99%;
+        height: 50px;
+        margin:0 auto;
+    }
+
+    .contact-title {
+        font-size: 1.4rem;
+    }
+
+    .contact-title:hover {
+        transform: translateX(60px);
+    }
+
+    .contact-list a {
+        font-size: 1.2rem;
+        padding: 0 15px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) {
+
+    .img-container {
+        width: 330px;
+        height: 220px;
+    }
+
+    .img-style {
+        width: 330px;
+        height: 220px;
+    }
+    .contact-container {
+        width: 99%;
+        height: 50px;
+        margin:0 auto;
+    }
+
+    .contact-list a {
+        font-size: 1.6rem;
+        padding: 0 15px;
         margin: 0 auto;
     }
 }
